<resources>
    <string name="app_name">Medocare</string>
    <string name="notification_channel_title">\"my_notification_channel\"</string>
    <string-array name="type_name">
        <item>tablet</item>
        <item>syrup</item>
        <item>cream</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medocare</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pwd">Change Password</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_add_note">AddNote</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>