<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.medocare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.medocare.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_changepwd"
        android:name="com.example.medocare.ui.change_password.ChangePwdFragment"
        android:label="@string/menu_pwd"
        tools:layout="@layout/fragment_changepwd" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.medocare.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.medocare.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>